--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -9,10 +9,6 @@ p {
   margin: 0;
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
-
 ul {
   margin: 0;
   padding: 0;
@@ -25,11 +21,18 @@ a {
 }
 
 button {
+  font-family: inherit;
+  line-height: inherit;
   cursor: pointer;
+  padding: 0;
+}
+
+address {
+  font-style: normal;
 }
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
