--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,21 +5,92 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./team.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  /* Fonts */
+  --font-primary: 'Inter', sans-serif;
+  --font-secondary: 'Montserrat', sans-serif;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  /* Font colors */
+  --font-light: #fff;
+  --font-dark: #000;
+
+  /* Main colors */
+  --light-color: #f6f7f7;
+  --dark-color: #06071b;
+  --gradient-color: linear-gradient(99deg, #00c4eb, #b544fe);
+
+  font-family: var(--font-primary);
+  /* font-size: 16px;
+  line-height: 24px;
+  font-weight: 400; */
+
+  color: var(--font-dark);
+  background-color: var(--font-light);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+.section {
+  padding: 40px 0;
+}
+@media only screen and (min-width: 768px) {
+  .section {
+    padding: 80px 0;
+  }
+}
+
+.container {
+  min-width: 320px;
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  outline: 2px solid red;
+  outline-offset: -2px;
+}
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 32px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .container {
+    padding: 0 16px;
+    max-width: 1280px;
+  }
+}
+
+.title {
+  text-align: center;
+  font-size: 20px;
+  line-height: normal;
+  text-transform: uppercase;
+}
+@media only screen and (min-width: 768px) {
+  .title {
+    font-size: 24px;
+  }
+}
+
+/**
+|============================
+| Card set
+|============================
+*/
+
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--indent);
+}
+.card-set-item {
+  width: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
