--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -19,28 +19,28 @@
           <img
             class="team-img mob"
             srcset="
-              ../img/team/team-1_mob@1x.png 1x,
-              ../img/team/team-1_mob@2x.png 2x
+              ./img/team/team-1_mob@1x.png 1x,
+              ./img/team/team-1_mob@2x.png 2x
             "
-            src="../img/team/team-1_mob.png"
+            src="./img/team/team-1_mob.png"
             alt="David Patel Managing Direcor"
           />
           <img
             class="team-img tab"
             srcset="
-              ../img/team/team-1_tab@1x.png 1x,
-              ../img/team/team-1_tab@2x.png 2x
+              ./img/team/team-1_tab@1x.png 1x,
+              ./img/team/team-1_tab@2x.png 2x
             "
-            src="../img/team/team-1_tab.png"
+            src="./img/team/team-1_tab.png"
             alt="David Patel Managing Direcor"
           />
           <img
             class="team-img desk"
             srcset="
-              ../img/team/team-1_desk@1x.png 1x,
-              ../img/team/team-1_desk@2x.png 2x
+              ./img/team/team-1_desk@1x.png 1x,
+              ./img/team/team-1_desk@2x.png 2x
             "
-            src="../img/team/team-1_desk.png"
+            src="./img/team/team-1_desk.png"
             alt="David Patel Managing Direcor"
           />
           <div class="team-caption">
@@ -56,28 +56,28 @@
           <img
             class="team-img mob"
             srcset="
-              ../img/team/team-2_mob@1x.png 1x,
-              ../img/team/team-2_mob@2x.png 2x
+              ./img/team/team-2_mob@1x.png 1x,
+              ./img/team/team-2_mob@2x.png 2x
             "
-            src="../img/team/team-2_mob.png"
+            src="./img/team/team-2_mob.png"
             alt="Rachel Kim Lead Designer"
           />
           <img
             class="team-img tab"
             srcset="
-              ../img/team/team-2_tab@1x.png 1x,
-              ../img/team/team-2_tab@2x.png 2x
+              ./img/team/team-2_tab@1x.png 1x,
+              ./img/team/team-2_tab@2x.png 2x
             "
-            src="../img/team/team-2_tab.png"
+            src="./img/team/team-2_tab.png"
             alt="Rachel Kim Lead Designer"
           />
           <img
             class="team-img desk"
             srcset="
-              ../img/team/team-2_desk@1x.png 1x,
-              ../img/team/team-2_desk@2x.png 2x
+              ./img/team/team-2_desk@1x.png 1x,
+              ./img/team/team-2_desk@2x.png 2x
             "
-            src="../img/team/team-2_desk.png"
+            src="./img/team/team-2_desk.png"
             alt="Rachel Kim Lead Designer"
           />
           <div class="team-caption">
@@ -93,28 +93,28 @@
           <img
             class="team-img mob"
             srcset="
-              ../img/team/team-3_mob@1x.png 1x,
-              ../img/team/team-3_mob@2x.png 2x
+              ./img/team/team-3_mob@1x.png 1x,
+              ./img/team/team-3_mob@2x.png 2x
             "
-            src="../img/team/team-3_mob.png"
+            src="./img/team/team-3_mob.png"
             alt="Samantha Chen Lead Developer"
           />
           <img
             class="team-img tab"
             srcset="
-              ../img/team/team-3_tab@1x.png 1x,
-              ../img/team/team-3_tab@2x.png 2x
+              ./img/team/team-3_tab@1x.png 1x,
+              ./img/team/team-3_tab@2x.png 2x
             "
-            src="../img/team/team-3_tab.png"
+            src="./img/team/team-3_tab.png"
             alt="Samantha Chen Lead Developer"
           />
           <img
             class="team-img desk"
             srcset="
-              ../img/team/team-3_desk@1x.png 1x,
-              ../img/team/team-3_desk@2x.png 2x
+              ./img/team/team-3_desk@1x.png 1x,
+              ./img/team/team-3_desk@2x.png 2x
             "
-            src="../img/team/team-3_desk.png"
+            src="./img/team/team-3_desk.png"
             alt="Samantha Chen Lead Developer"
           />
           <div class="team-caption">
@@ -130,28 +130,28 @@
           <img
             class="team-img mob"
             srcset="
-              ../img/team/team-4_mob@1x.png 1x,
-              ../img/team/team-4_mob@2x.png 2x
+              ./img/team/team-4_mob@1x.png 1x,
+              ./img/team/team-4_mob@2x.png 2x
             "
-            src="../img/team/team-4_mob.png"
+            src="./img/team/team-4_mob.png"
             alt="Andrew Nguyen Sr. UI Designer"
           />
           <img
             class="team-img tab"
             srcset="
-              ../img/team/team-4_tab@1x.png 1x,
-              ../img/team/team-4_tab@2x.png 2x
+              ./img/team/team-4_tab@1x.png 1x,
+              ./img/team/team-4_tab@2x.png 2x
             "
-            src="../img/team/team-4_tab.png"
+            src="./img/team/team-4_tab.png"
             alt="Andrew Nguyen Sr. UI Designer"
           />
           <img
             class="team-img desk"
             srcset="
-              ../img/team/team-4_desk@1x.png 1x,
-              ../img/team/team-4_desk@2x.png 2x
+              ./img/team/team-4_desk@1x.png 1x,
+              ./img/team/team-4_desk@2x.png 2x
             "
-            src="../img/team/team-4_desk.png"
+            src="./img/team/team-4_desk.png"
             alt="Andrew Nguyen Sr. UI Designer"
           />
           <div class="team-caption">
